Client/Providers split - separate the api schema to have separate endpoints and regenerate - split them in the database - cleanup db queries to no longer worry about role and email - cleanup db queries to use client and provider specifically - cleanup Id vs ID linting issues - cleanup Now() inputs into database that already have a NOT NULL DEFAULT NOW()
